--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : @clari_pasman
+  username               : clari_pasman
 facebook:
   username               :Clari Pasman 
   app_id                 :
