--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ yandex_site_verification :
 twitter:
   username               : clari_pasman
 facebook:
-  username               :Clari Pasman 
+  username               : 
   app_id                 :
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
